--- a/MusicApp_ios/Views/Home/HomeViewController.xib
+++ b/MusicApp_ios/Views/Home/HomeViewController.xib
@@ -18,53 +18,105 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vZv-Rr-v2W">
-                    <rect key="frame" x="20" y="10" width="335" height="44"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYP-Ls-Oe0">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hqR-Nj-sRQ">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="28"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5MM-CU-efk">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="あなたへのオススメ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H8l-JS-Hxy">
-                                    <rect key="frame" x="0.0" y="0.0" width="255" height="28"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYv-Rr-T27">
-                                    <rect key="frame" x="255" y="0.0" width="80" height="28"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" id="nEB-Tm-7u4">
+                                    <rect key="frame" x="20" y="615" width="335" height="240"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sUG-ul-xjS">
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="52.5"/>
+                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jRI-f3-wH0">
+                                            <rect key="frame" x="0.0" y="62.5" width="335" height="52.5"/>
+                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qAq-hT-qDJ">
+                                            <rect key="frame" x="0.0" y="125" width="335" height="52.5"/>
+                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JnI-M9-vpk">
+                                            <rect key="frame" x="0.0" y="187.5" width="335" height="52.5"/>
+                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        </view>
+                                    </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="BpE-d2-RTT"/>
+                                        <constraint firstAttribute="height" constant="240" id="Y2c-zc-k5Z"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <state key="normal" title="すべて表示"/>
-                                </button>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="vZv-Rr-v2W">
+                                    <rect key="frame" x="56" y="39" width="263.5" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hqR-Nj-sRQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="263.5" height="28"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="あなたへのオススメ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H8l-JS-Hxy">
+                                                    <rect key="frame" x="0.0" y="0.0" width="183.5" height="28"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYv-Rr-T27">
+                                                    <rect key="frame" x="183.5" y="0.0" width="80" height="28"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="BpE-d2-RTT"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <state key="normal" title="すべて表示"/>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="おすすめ曲を選んで再生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsA-bN-UJI">
+                                            <rect key="frame" x="0.0" y="28" width="263.5" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
                             </subviews>
-                        </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="おすすめ曲を選んで再生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsA-bN-UJI">
-                            <rect key="frame" x="0.0" y="28" width="335" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1000" id="5IQ-V4-tzS"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                </stackView>
+                    <constraints>
+                        <constraint firstItem="5MM-CU-efk" firstAttribute="leading" secondItem="sYP-Ls-Oe0" secondAttribute="leading" id="8aC-ic-plf"/>
+                        <constraint firstItem="5MM-CU-efk" firstAttribute="top" secondItem="sYP-Ls-Oe0" secondAttribute="top" id="KZG-f6-g7x"/>
+                        <constraint firstAttribute="bottom" secondItem="5MM-CU-efk" secondAttribute="bottom" id="PO8-vc-WoA"/>
+                        <constraint firstAttribute="trailing" secondItem="5MM-CU-efk" secondAttribute="trailing" id="V2G-Gn-i5z"/>
+                        <constraint firstItem="5MM-CU-efk" firstAttribute="width" secondItem="sYP-Ls-Oe0" secondAttribute="width" id="pwH-90-N3y"/>
+                    </constraints>
+                </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="vZv-Rr-v2W" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="5aY-ok-3fb"/>
-                <constraint firstItem="vZv-Rr-v2W" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="7Ca-Xf-ss3"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vZv-Rr-v2W" secondAttribute="trailing" constant="20" id="bh9-z5-rqA"/>
+                <constraint firstItem="sYP-Ls-Oe0" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Cgi-s1-EpG"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sYP-Ls-Oe0" secondAttribute="trailing" id="HF4-a2-1ZB"/>
+                <constraint firstItem="sYP-Ls-Oe0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="eOg-AK-AyZ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="sYP-Ls-Oe0" secondAttribute="bottom" id="pBC-un-syz"/>
             </constraints>
-            <point key="canvasLocation" x="112" y="109"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="111.2" y="221.28935532233885"/>
         </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
