--- a/MusicApp_ios/Views/Music/MusicViewController.xib
+++ b/MusicApp_ios/Views/Music/MusicViewController.xib
@@ -1,13 +1,25 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MusicViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MusicViewController" customModule="MusicApp_ios" customModuleProvider="target">
             <connections>
+                <outlet property="afterImageView" destination="yfW-3t-BMI" id="F6d-8z-3Np"/>
+                <outlet property="artistLabel" destination="bxi-Ai-8BZ" id="6Ot-NH-Wzj"/>
+                <outlet property="beforeImageView" destination="YeO-K7-k1T" id="ayj-lg-JjT"/>
+                <outlet property="endTimerLabel" destination="BIw-If-w2e" id="6l2-d7-7R2"/>
+                <outlet property="firstTimerLabel" destination="nn4-Ws-F0T" id="ztn-7G-hs2"/>
+                <outlet property="musicImageView" destination="Qed-Td-vqt" id="lxk-NX-33R"/>
+                <outlet property="musicSlider" destination="978-YO-3Sf" id="Mgs-2G-Is4"/>
+                <outlet property="startImageView" destination="Ph4-qL-GKA" id="rLp-EL-cHB"/>
+                <outlet property="titleLabel" destination="DZn-sJ-u80" id="J9Z-Xp-fSu"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +27,124 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qed-Td-vqt">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="300" id="R5e-dz-tcq"/>
+                    </constraints>
+                </imageView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ITV-c6-cpS">
+                    <rect key="frame" x="140.5" y="330" width="94.5" height="54.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cry Baby" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZn-sJ-u80">
+                            <rect key="frame" x="0.0" y="0.0" width="94.5" height="29"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="優里" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxi-Ai-8BZ">
+                            <rect key="frame" x="0.0" y="34" width="94.5" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="978-YO-3Sf">
+                    <rect key="frame" x="18" y="414.5" width="339" height="31"/>
+                    <color key="minimumTrackTintColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </slider>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nn4-Ws-F0T">
+                    <rect key="frame" x="20" y="449.5" width="46" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05:32" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BIw-If-w2e">
+                    <rect key="frame" x="310" y="449.5" width="45" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ms6-3W-TNX">
+                    <rect key="frame" x="107.5" y="514.5" width="160" height="40"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oRq-J7-OlH">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music_before" translatesAutoresizingMaskIntoConstraints="NO" id="YeO-K7-k1T">
+                                    <rect key="frame" x="10" y="10" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="U5j-VA-rae"/>
+                                        <constraint firstAttribute="width" constant="20" id="yMn-y9-DJZ"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="YeO-K7-k1T" firstAttribute="centerY" secondItem="oRq-J7-OlH" secondAttribute="centerY" id="0XU-Lo-dPP"/>
+                                <constraint firstAttribute="width" constant="40" id="Ii5-bo-zNI"/>
+                                <constraint firstItem="YeO-K7-k1T" firstAttribute="centerX" secondItem="oRq-J7-OlH" secondAttribute="centerX" id="rUT-Ri-Fil"/>
+                            </constraints>
+                        </view>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music_start" translatesAutoresizingMaskIntoConstraints="NO" id="Ph4-qL-GKA">
+                            <rect key="frame" x="60" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="Ale-ba-Qw1"/>
+                            </constraints>
+                        </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBo-Ad-LZC">
+                            <rect key="frame" x="120" y="0.0" width="40" height="40"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music_after" translatesAutoresizingMaskIntoConstraints="NO" id="yfW-3t-BMI">
+                                    <rect key="frame" x="10" y="10" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="X17-XI-kIU"/>
+                                        <constraint firstAttribute="width" constant="20" id="gDR-Pw-phq"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="yfW-3t-BMI" firstAttribute="centerX" secondItem="bBo-Ad-LZC" secondAttribute="centerX" id="RSG-2e-J9b"/>
+                                <constraint firstItem="yfW-3t-BMI" firstAttribute="centerY" secondItem="bBo-Ad-LZC" secondAttribute="centerY" id="ULn-g7-exQ"/>
+                                <constraint firstAttribute="width" constant="40" id="aoj-pp-OeB"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="CKr-b5-s3X"/>
+                    </constraints>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="ms6-3W-TNX" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DyP-7z-eUA"/>
+                <constraint firstItem="BIw-If-w2e" firstAttribute="top" secondItem="978-YO-3Sf" secondAttribute="bottom" constant="5" id="E3d-2q-2hZ"/>
+                <constraint firstItem="Qed-Td-vqt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Lt0-Ch-bat"/>
+                <constraint firstItem="ms6-3W-TNX" firstAttribute="top" secondItem="978-YO-3Sf" secondAttribute="bottom" constant="70" id="QFd-oa-akI"/>
+                <constraint firstItem="Qed-Td-vqt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="QzX-h8-Yk8"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Qed-Td-vqt" secondAttribute="trailing" id="TnI-vq-CfH"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="978-YO-3Sf" secondAttribute="trailing" constant="20" id="TsM-R7-nti"/>
+                <constraint firstItem="nn4-Ws-F0T" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="XVR-7n-JfO"/>
+                <constraint firstItem="978-YO-3Sf" firstAttribute="top" secondItem="ITV-c6-cpS" secondAttribute="bottom" constant="30" id="aMB-EB-HeR"/>
+                <constraint firstItem="ITV-c6-cpS" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="bR3-W0-A5d"/>
+                <constraint firstItem="ITV-c6-cpS" firstAttribute="top" secondItem="Qed-Td-vqt" secondAttribute="bottom" constant="30" id="cVA-4i-AcI"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="BIw-If-w2e" secondAttribute="trailing" constant="20" id="iWN-WL-UiX"/>
+                <constraint firstItem="nn4-Ws-F0T" firstAttribute="top" secondItem="978-YO-3Sf" secondAttribute="bottom" constant="5" id="sKF-NF-SZY"/>
+                <constraint firstItem="978-YO-3Sf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="yhT-73-mpD"/>
+            </constraints>
+            <point key="canvasLocation" x="138.40000000000001" y="108.39580209895054"/>
         </view>
     </objects>
+    <resources>
+        <image name="music_after" width="25" height="20"/>
+        <image name="music_before" width="26" height="21"/>
+        <image name="music_start" width="20" height="30"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
